# sanskrit-util

./: .gitattributes  .gitignore  CHANGELOG.md  CITATION.cff  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml
js/: build-global.mjs  index.mjs  package.json  sanskrit-util.global.js
js/test/: global.test.mjs  units.test.mjs  vectors.test.mjs
py/: pyproject.toml
py/sanskrit_util/: __init__.py
py/tests/: test_units.py  test_vectors.py
tools/: crosscheck.py  crosscheck_js.mjs  gen_vectors.py
vectors/: vectors.json
